<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.kahlmann.gamifiedto_do.Menu">

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/quit_menu"
        android:id="@+id/id_quit_button"
        android:layout_marginBottom="145dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/options_menu"
        android:id="@+id/id_options_button"
        android:layout_above="@+id/id_quit_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/achievements_menu"
        android:id="@+id/id_achievements_button"
        android:layout_above="@+id/id_options_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/character_menu"
        android:id="@+id/id_character_button"
        android:layout_above="@+id/id_achievements_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/quests_menu"
        android:id="@+id/id_quests_button"
        android:layout_above="@+id/id_character_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/menu_name"
        android:layout_above="@+id/id_quests_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp" />
</RelativeLayout>
